<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utt.if26.wang_tp04.MainActivity">

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="488dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.94"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nomLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom" />

            <EditText
                android:id="@+id/nomSaisie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/family_name" />

            <TextView
                android:id="@+id/prenomLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pr_nom" />

            <EditText
                android:id="@+id/prenomSaisie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b01" />

                <Button
                    android:id="@+id/b02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/b02" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

